2004-03-25  Sven Neumann  <sven@gimp.org>
	* README: mention the gimp-perl pre-release and provide a link.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12833 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-25  Sven Neumann  <sven@gimp.org>
+
+	* README: mention the gimp-perl pre-release and provide a link.
+
 2004-03-25  Michael Natterer  <mitch@gimp.org>
 
 	* app/base/tile-manager.c (tile_manager_new): g_return_if_fail()
