--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-25  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Updated British English translation
+
 2004-03-25  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Dongsu Jang
