--- a/po-libgimp/en_GB.po
+++ b/po-libgimp/en_GB.po
@@ -6,9 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp CVS\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2000-02-02 14:02+0000\n"
-"Last-Translator: Robert Brady <robert@susu.org.uk>\n"
+"POT-Creation-Date: 2004-03-25 19:57-0500\n"
+"PO-Revision-Date: 2004-03-25 16:17-0500\n"
+"Last-Translator: Gareth Owen <gowen72@yahoo.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16,136 +16,140 @@ msgstr ""
 
 #: libgimp/gimpbrushmenu.c:132
 msgid "Brush Selection"
-msgstr ""
+msgstr "Brush Selection"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "_Browse..."
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
 #, c-format
 msgid "%s can't handle layers"
-msgstr ""
+msgstr "%s can't handle layers"
 
 #: libgimp/gimpexport.c:216 libgimp/gimpexport.c:225 libgimp/gimpexport.c:234
 msgid "Merge Visible Layers"
-msgstr ""
+msgstr "Merge Visible Layers"
 
 #: libgimp/gimpexport.c:224
 #, c-format
 msgid "%s can't handle layer offsets, size or opacity"
-msgstr ""
+msgstr "%s can't handle layer offsets, size or opacity"
 
 #: libgimp/gimpexport.c:233 libgimp/gimpexport.c:242
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle layers as animation frames"
-msgstr "can only Handle Greyscale Images"
+msgstr "%s can only handle layers as animation frames"
 
 #: libgimp/gimpexport.c:234 libgimp/gimpexport.c:243
 msgid "Save as Animation"
-msgstr ""
+msgstr "Save as Animation"
 
 #: libgimp/gimpexport.c:243 libgimp/gimpexport.c:252 libgimp/gimpexport.c:261
 msgid "Flatten Image"
-msgstr ""
+msgstr "Flatten Image"
 
 #: libgimp/gimpexport.c:260
 #, c-format
 msgid "%s can't handle transparency"
-msgstr ""
+msgstr "%s can't handle transparency"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "can only Handle Greyscale Images"
+msgstr "%s can't handle layer masks"
 
 #: libgimp/gimpexport.c:270
 msgid "Apply Layer Masks"
-msgstr ""
+msgstr "Apply Layer Masks"
 
 #: libgimp/gimpexport.c:278
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB images"
-msgstr "can only Handle Greyscale Images"
+msgstr "%s can only handle RGB images"
 
 #: libgimp/gimpexport.c:279 libgimp/gimpexport.c:317 libgimp/gimpexport.c:326
 msgid "Convert to RGB"
-msgstr ""
+msgstr "Convert to RGB"
 
 #: libgimp/gimpexport.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale images"
-msgstr "can only Handle Greyscale Images"
+msgstr "%s can only handle greyscale images"
 
 #: libgimp/gimpexport.c:288 libgimp/gimpexport.c:317 libgimp/gimpexport.c:338
 msgid "Convert to Grayscale"
 msgstr "Convert to Greyscale"
 
 #: libgimp/gimpexport.c:296
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle indexed images"
-msgstr "can only Handle Greyscale or Indexed Images"
+msgstr "%s can only handle indexed images"
 
 #: libgimp/gimpexport.c:297 libgimp/gimpexport.c:326 libgimp/gimpexport.c:336
 msgid ""
 "Convert to Indexed using default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
+"Convert to Indexed using default settings\n"
+"(Do it manually to tune the result)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "can only Handle Greyscale or Indexed Images"
+msgstr "%s can only handle bitmap (two colour) indexed images"
 
 #: libgimp/gimpexport.c:307
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
+"Convert to Indexed using bitmap default settings\n"
+"(Do it manually to tune the result)"
 
 #: libgimp/gimpexport.c:316
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or grayscale images"
-msgstr "can only Handle RGB or Greyscale Images"
+msgstr "%s can only handle RGB or greyscale images"
 
 #: libgimp/gimpexport.c:325
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or indexed images"
-msgstr "can only Handle Greyscale or Indexed Images"
+msgstr "%s can only handle RGB or indexed images"
 
 #: libgimp/gimpexport.c:335
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale or indexed images"
-msgstr "can only Handle Greyscale or Indexed Images"
+msgstr "%s can only handle greyscale or indexed images"
 
 #: libgimp/gimpexport.c:346
 #, c-format
 msgid "%s needs an alpha channel"
-msgstr ""
+msgstr "%s needs an alpha channel"
 
 #: libgimp/gimpexport.c:347
 msgid "Add Alpha Channel"
-msgstr ""
+msgstr "Add Alpha Channel"
 
 #: libgimp/gimpexport.c:382
 msgid "Confirm Save"
-msgstr ""
+msgstr "Confirm Save"
 
 #: libgimp/gimpexport.c:388
 msgid "Confirm"
-msgstr ""
+msgstr "Confirm"
 
 #: libgimp/gimpexport.c:457
 msgid "Export File"
-msgstr ""
+msgstr "Export File"
 
 #: libgimp/gimpexport.c:461
 msgid "_Ignore"
-msgstr ""
+msgstr "_Ignore"
 
 #: libgimp/gimpexport.c:463
 msgid "_Export"
-msgstr ""
+msgstr "_Export"
 
 #. the headline
 #: libgimp/gimpexport.c:485
@@ -154,10 +158,12 @@ msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
 msgstr ""
+"Your image should be exported before it can be saved as %s for the following "
+"reasons:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
-msgstr ""
+msgstr "The export conversion won't modify your original image."
 
 #: libgimp/gimpexport.c:665
 #, c-format
@@ -165,6 +171,8 @@ msgid ""
 "You are about to save a layer mask as %s.\n"
 "This will not save the visible layers."
 msgstr ""
+"You are about to save a layer mask as %s.\n"
+"This will not save the visible layers."
 
 #: libgimp/gimpexport.c:671
 #, c-format
@@ -172,493 +180,497 @@ msgid ""
 "You are about to save a channel (saved selection) as %s.\n"
 "This will not save the visible layers."
 msgstr ""
+"You are about to save a channel (saved selection) as %s.\n"
+"This will not save the visible layers."
 
 #: libgimp/gimpfontmenu.c:89
 msgid "Font Selection"
-msgstr ""
+msgstr "Font Selection"
 
 #: libgimp/gimpgradientmenu.c:103
 msgid "Gradient Selection"
-msgstr ""
+msgstr "Gradient Selection"
 
 #: libgimp/gimpmenu.c:407
 msgid "None"
-msgstr ""
+msgstr "None"
 
 #: libgimp/gimppatternmenu.c:115
 msgid "Pattern Selection"
-msgstr ""
+msgstr "Pattern Selection"
 
 #: libgimp/gimpunitcache.c:57
 msgid "percent"
-msgstr ""
+msgstr "percent"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(invalid UTF-8 string)"
 
 #: libgimpbase/gimputils.c:244
 #, c-format
 msgid "%d Bytes"
-msgstr ""
+msgstr "%d Bytes"
 
 #: libgimpbase/gimputils.c:249
 #, c-format
 msgid "%.2f KB"
-msgstr ""
+msgstr "%.2f KB"
 
 #: libgimpbase/gimputils.c:253
 #, c-format
 msgid "%.1f KB"
-msgstr ""
+msgstr "%.1f KB"
 
 #: libgimpbase/gimputils.c:257
 #, c-format
 msgid "%d KB"
-msgstr ""
+msgstr "%d KB"
 
 #: libgimpbase/gimputils.c:264
 #, c-format
 msgid "%.2f MB"
-msgstr ""
+msgstr "%.2f MB"
 
 #: libgimpbase/gimputils.c:268
 #, c-format
 msgid "%.1f MB"
-msgstr ""
+msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:272
 #, c-format
 msgid "%d MB"
-msgstr ""
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:279
 #, c-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:283
 #, c-format
 msgid "%.1f GB"
-msgstr ""
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:287
 #, c-format
 msgid "%d GB"
-msgstr ""
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
 msgid "Loading module: '%s'\n"
-msgstr ""
+msgstr "Loading module: '%s'\n"
 
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
 #, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
+msgstr "Module '%s' load error: %s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
 msgid "Skipping module: '%s'\n"
-msgstr ""
+msgstr "Skipping module: '%s'\n"
 
 #: libgimpmodule/gimpmodule.c:424
 msgid "Module error"
-msgstr ""
+msgstr "Module error"
 
 #: libgimpmodule/gimpmodule.c:425
 msgid "Loaded"
-msgstr ""
+msgstr "Loaded"
 
 #: libgimpmodule/gimpmodule.c:426
 msgid "Load failed"
-msgstr ""
+msgstr "Load failed"
 
 #: libgimpmodule/gimpmodule.c:427
 msgid "Not loaded"
-msgstr ""
+msgstr "Not loaded"
 
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "Failed to create thumbnail folder '%s'."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/Use Foreground Colour"
+msgstr "/_Foreground Colour"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/Use Background Colour"
+msgstr "/_Background Colour"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
 msgid "/Blac_k"
-msgstr ""
+msgstr "/Blac_k"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
 msgid "/_White"
-msgstr ""
+msgstr "/_White"
 
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
-msgstr ""
+msgstr "Scales"
 
 #: libgimpwidgets/gimpcolorscales.c:164 libgimpwidgets/gimpcolorselect.c:353
 msgid "_H"
-msgstr ""
+msgstr "_H"
 
 #: libgimpwidgets/gimpcolorscales.c:165 libgimpwidgets/gimpcolorselect.c:353
 msgid "_S"
-msgstr ""
+msgstr "_S"
 
 #: libgimpwidgets/gimpcolorscales.c:166 libgimpwidgets/gimpcolorselect.c:353
 msgid "_V"
-msgstr ""
+msgstr "_V"
 
 #: libgimpwidgets/gimpcolorscales.c:167 libgimpwidgets/gimpcolorselect.c:353
 msgid "_R"
-msgstr ""
+msgstr "_R"
 
 #: libgimpwidgets/gimpcolorscales.c:168 libgimpwidgets/gimpcolorselect.c:353
 msgid "_G"
-msgstr ""
+msgstr "_G"
 
 #: libgimpwidgets/gimpcolorscales.c:169 libgimpwidgets/gimpcolorselect.c:353
 msgid "_B"
-msgstr ""
+msgstr "_B"
 
 #: libgimpwidgets/gimpcolorscales.c:170
 msgid "_A"
-msgstr ""
+msgstr "_A"
 
 #: libgimpwidgets/gimpcolorscales.c:174 libgimpwidgets/gimpcolorselect.c:357
 msgid "Hue"
-msgstr ""
+msgstr "Hue"
 
 #: libgimpwidgets/gimpcolorscales.c:175 libgimpwidgets/gimpcolorselect.c:358
 #: modules/cdisplay_proof.c:323
 msgid "Saturation"
-msgstr ""
+msgstr "Saturation"
 
 #: libgimpwidgets/gimpcolorscales.c:176 libgimpwidgets/gimpcolorselect.c:359
 msgid "Value"
-msgstr ""
+msgstr "Value"
 
 #: libgimpwidgets/gimpcolorscales.c:177 libgimpwidgets/gimpcolorselect.c:360
 msgid "Red"
-msgstr ""
+msgstr "Red"
 
 #: libgimpwidgets/gimpcolorscales.c:178 libgimpwidgets/gimpcolorselect.c:361
 msgid "Green"
-msgstr ""
+msgstr "Green"
 
 #: libgimpwidgets/gimpcolorscales.c:179 libgimpwidgets/gimpcolorselect.c:362
 msgid "Blue"
-msgstr ""
+msgstr "Blue"
 
 #: libgimpwidgets/gimpcolorscales.c:180 libgimpwidgets/gimpcolorselect.c:363
 msgid "Alpha"
-msgstr ""
+msgstr "Alpha"
 
 #: libgimpwidgets/gimpcolorscales.c:254
 msgid "Hexadecimal color notation as used in HTML"
-msgstr ""
+msgstr "Hexadecimal colour notation as used in HTML"
 
 #: libgimpwidgets/gimpcolorscales.c:268
 msgid "He_x Triplet:"
-msgstr ""
+msgstr "He_x Triplet:"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Current:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Old:"
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
-msgstr ""
+msgstr "Select Folder"
 
 #: libgimpwidgets/gimpfileentry.c:364
 msgid "Select File"
-msgstr ""
+msgstr "Select File"
 
 #: libgimpwidgets/gimpmemsizeentry.c:234
 msgid "KiloBytes"
-msgstr ""
+msgstr "KiloBytes"
 
 #: libgimpwidgets/gimpmemsizeentry.c:235
 msgid "MegaBytes"
-msgstr ""
+msgstr "MegaBytes"
 
 #: libgimpwidgets/gimpmemsizeentry.c:236
 msgid "GigaBytes"
-msgstr ""
+msgstr "GigaBytes"
 
 #: libgimpwidgets/gimppatheditor.c:243
 msgid "Writable"
-msgstr ""
+msgstr "Writable"
 
 #: libgimpwidgets/gimppatheditor.c:252
 msgid "Folder"
-msgstr ""
+msgstr "Folder"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
 "that color."
 msgstr ""
+"Click the eyedropper, then click a colour anywhere on your screen to select "
+"that colour."
 
 #: libgimpwidgets/gimpstock.c:113
 msgid "Anchor"
-msgstr ""
+msgstr "Anchor"
 
 #: libgimpwidgets/gimpstock.c:114
 msgid "_Duplicate"
-msgstr ""
+msgstr "_Duplicate"
 
 #: libgimpwidgets/gimpstock.c:115
 msgid "_Edit"
-msgstr ""
+msgstr "_Edit"
 
 #: libgimpwidgets/gimpstock.c:116
 msgid "Linked"
-msgstr ""
+msgstr "Linked"
 
 #: libgimpwidgets/gimpstock.c:117
 msgid "Paste as New"
-msgstr ""
+msgstr "Paste as New"
 
 #: libgimpwidgets/gimpstock.c:118
 msgid "Paste Into"
-msgstr ""
+msgstr "Paste Into"
 
 #: libgimpwidgets/gimpstock.c:119
 msgid "_Reset"
-msgstr ""
+msgstr "_Reset"
 
 #: libgimpwidgets/gimpstock.c:120
 msgid "Visible"
-msgstr ""
+msgstr "Visible"
 
 #: libgimpwidgets/gimpstock.c:168
 msgid "L_etter Spacing"
-msgstr ""
+msgstr "L_etter Spacing"
 
 #: libgimpwidgets/gimpstock.c:169
 msgid "L_ine Spacing"
-msgstr ""
+msgstr "L_ine Spacing"
 
 #: libgimpwidgets/gimpstock.c:184
 msgid "_Resize"
-msgstr ""
+msgstr "_Resize"
 
 #: libgimpwidgets/gimpstock.c:185 libgimpwidgets/gimpstock.c:284
 msgid "_Scale"
-msgstr ""
+msgstr "_Scale"
 
 #: libgimpwidgets/gimpstock.c:263
 msgid "Crop"
-msgstr ""
+msgstr "Crop"
 
 #: libgimpwidgets/gimpstock.c:280
 msgid "_Transform"
-msgstr ""
+msgstr "_Transform"
 
 #: libgimpwidgets/gimpstock.c:283
 msgid "_Rotate"
-msgstr ""
+msgstr "_Rotate"
 
 #: libgimpwidgets/gimpstock.c:285
 msgid "_Shear"
-msgstr ""
+msgstr "_Shear"
 
 #: libgimpwidgets/gimpunitmenu.c:304
 msgid "More..."
-msgstr ""
+msgstr "More..."
 
 #: libgimpwidgets/gimpunitmenu.c:614
 msgid "Unit Selection"
-msgstr ""
+msgstr "Unit Selection"
 
 #: libgimpwidgets/gimpunitmenu.c:657
 msgid "Unit"
-msgstr ""
+msgstr "Unit"
 
 #: libgimpwidgets/gimpunitmenu.c:661
 msgid "Factor"
-msgstr ""
+msgstr "Factor"
 
 #: libgimpwidgets/gimpwidgets.c:1291
 msgid ""
 "Use this value for random number generator seed - this allows you to repeat "
 "a given \"random\" operation"
 msgstr ""
+"Use this value for random number generator seed - this allows you to repeat "
+"a given \"random\" operation"
 
 #: libgimpwidgets/gimpwidgets.c:1295
 msgid "_New Seed"
-msgstr ""
+msgstr "_New Seed"
 
 #: libgimpwidgets/gimpwidgets.c:1308
 msgid "Seed random number generator with a generated random number"
-msgstr ""
+msgstr "Seed random number generator with a generated random number"
 
 #: libgimpwidgets/gimpwidgets.c:1312
 msgid "_Randomize"
-msgstr ""
+msgstr "_Randomise"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
-msgstr ""
+msgstr "Colour deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
 
 #: modules/cdisplay_colorblind.c:190
 msgid "Color Deficient Vision"
-msgstr ""
+msgstr "Colour Deficient Vision"
 
 #: modules/cdisplay_colorblind.c:464
 msgid "Color _Deficiency Type:"
-msgstr ""
+msgstr "Colour _Deficiency Type:"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
-msgstr ""
+msgstr "Protanopia (insensitivity to red)"
 
 #: modules/cdisplay_colorblind.c:476
 msgid "Deuteranopia (insensitivity to green)"
-msgstr ""
+msgstr "Deuteranopia (insensitivity to green)"
 
 #: modules/cdisplay_colorblind.c:479
 msgid "Tritanopia (insensitivity to blue)"
-msgstr ""
+msgstr "Tritanopia (insensitivity to blue)"
 
 #: modules/cdisplay_gamma.c:90
 msgid "Gamma color display filter"
-msgstr ""
+msgstr "Gamma colour display filter"
 
 #: modules/cdisplay_gamma.c:156
 msgid "Gamma"
-msgstr ""
+msgstr "Gamma"
 
 #: modules/cdisplay_gamma.c:311
 msgid "_Gamma:"
-msgstr ""
+msgstr "_Gamma:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
-msgstr ""
+msgstr "High Contrast colour display filter"
 
 #: modules/cdisplay_highcontrast.c:156
 msgid "Contrast"
-msgstr ""
+msgstr "Contrast"
 
 #: modules/cdisplay_highcontrast.c:308
 msgid "Contrast C_ycles:"
-msgstr ""
+msgstr "Contrast C_ycles:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Colour proof filter using ICC colour profile"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Colour Proof"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Perceptual"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Relative Colourimetric"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Absolute Colourimetric"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Intent:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Choose an ICC Colour Profile"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Profile:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "_Black Point Compensation"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
-msgstr ""
+msgstr "CMYK colour selector"
 
 #: modules/colorsel_cmyk.c:132
 msgid "CMYK"
-msgstr ""
+msgstr "CMYK"
 
 #: modules/colorsel_cmyk.c:149
 msgid "_C"
-msgstr ""
+msgstr "_C"
 
 #: modules/colorsel_cmyk.c:150
 msgid "_M"
-msgstr ""
+msgstr "_M"
 
 #: modules/colorsel_cmyk.c:151
 msgid "_Y"
-msgstr ""
+msgstr "_Y"
 
 #: modules/colorsel_cmyk.c:152
 msgid "_K"
-msgstr ""
+msgstr "_K"
 
 #: modules/colorsel_cmyk.c:156
 msgid "Cyan"
-msgstr ""
+msgstr "Cyan"
 
 #: modules/colorsel_cmyk.c:157
 msgid "Magenta"
-msgstr ""
+msgstr "Magenta"
 
 #: modules/colorsel_cmyk.c:158
 msgid "Yellow"
-msgstr ""
+msgstr "Yellow"
 
 #: modules/colorsel_cmyk.c:159
 msgid "Black"
-msgstr ""
+msgstr "Black"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "Black Pullout (%):"
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
-msgstr ""
+msgstr "Painter-style triangle colour selector"
 
 #: modules/colorsel_triangle.c:182
 msgid "Triangle"
-msgstr ""
+msgstr "Triangle"
 
 #: modules/colorsel_water.c:104
 msgid "Watercolor style color selector"
-msgstr ""
+msgstr "Watercolour style colour selector"
 
 #: modules/colorsel_water.c:176
 msgid "Watercolor"
-msgstr ""
+msgstr "Watercolour"
 
 #: modules/colorsel_water.c:251
 msgid "Pressure"
-msgstr ""
+msgstr "Pressure"
 
 #~ msgid "millimeter"
 #~ msgstr "millimetre"
