--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-25  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Added British English translation
+
 2004-03-25  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
