2004-03-26  Manish Singh  <yosh@gimp.org>
        * tools/pdbgen/app.pl: kill whitespace in blank lines.

        * app/pdb/*.c: regenerated, no code changes, only whitespace.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12838 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-26  Manish Singh  <yosh@gimp.org>
+
+	* tools/pdbgen/app.pl: kill whitespace in blank lines.
+
+	* app/pdb/*.c: regenerated, no code changes, only whitespace.
+
 2004-03-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpdrawable-transform.c
