2004-03-26  Manish Singh  <yosh@gimp.org>
        * tools/pdbgen/app.pl: don't generate code with tabs.

        * tools/pdbgen/pdb/procedural_db.pdb: convert tabs to spaces in
        helper function declaration.

        * app/pdb/procedural_db.c: convert tabs to spaces.

        * app/pdb/*.c: regenerated, no code changes, only tabs->spaces.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12839 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-03-26  Manish Singh  <yosh@gimp.org>
 
+	* tools/pdbgen/app.pl: don't generate code with tabs.
+
+	* tools/pdbgen/pdb/procedural_db.pdb: convert tabs to spaces in
+	helper function declaration.
+
+	* app/pdb/procedural_db.c: convert tabs to spaces.
+
+	* app/pdb/*.c: regenerated, no code changes, only tabs->spaces.
+
+2004-03-26  Manish Singh  <yosh@gimp.org>
+
 	* tools/pdbgen/app.pl: kill whitespace in blank lines.
 
 	* app/pdb/*.c: regenerated, no code changes, only whitespace.
