2004-03-27  Tor Lillqvist  <tml@iki.fi>
	* plug-ins/help/Makefile.am (AM_LDFLAGS): Use -mwindows on Windows
	to avoid a console window popping up.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12840 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-27  Tor Lillqvist  <tml@iki.fi>
+
+	* plug-ins/help/Makefile.am (AM_LDFLAGS): Use -mwindows on Windows
+	to avoid a console window popping up.
+
 2004-03-26  Manish Singh  <yosh@gimp.org>
 
 	* tools/pdbgen/app.pl: don't generate code with tabs.
