--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-28  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
+
+	* ja.po: Added missing slashes.
+
 2004-03-25  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translation
