--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-28  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added en_GB.po (British English).
+
 2004-03-25  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Added British English translation
