--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-28  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/slide.scm: applied a (modified) patch
+	from Nils Philippsen that fixes bug #138310.
+
 2004-03-28  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/guillotine.c (guillotine): applied a (modified)
