--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-03-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/MapObject/mapobject_main.c: fixed non-interactive call.
+
+	* plug-ins/script-fu/scripts/spinning-globe.scm: pass -1 as
+	drawable ID for unused drawables. Fixes bug #138253.
+	
+2004-03-28  Sven Neumann  <sven@gimp.org>
+
 	* app/text/gimpfontlist.c (gimp_font_list_add_font): validate the
 	font name. This should work around the crashes that Windows users
 	were experiencing on startup (bug #132366). The real problem needs
