--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/ifscompose/ifscompose.c: applied patch from David Necas
+	that updates the sensitivity of the Delete button and menu entry.
+	Fixes bug 138212#.
+
+2004-03-28  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/MapObject/mapobject_main.c: fixed non-interactive call.
 
 	* plug-ins/script-fu/scripts/spinning-globe.scm: pass -1 as
