--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-29  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/guillotine.c (guillotine): Don't just skip
+	guides at the image edges but any guide which is at a position we
+	already remembered. Should catch all instances of bug #138312 this
+	time.
+
 2004-03-28  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/ifscompose/ifscompose.c: applied patch from David Necas
