--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-29  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation by
+	Xavier Beà <xbea@pie.xtec.es>.
+
 2004-03-28  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
 
 	* ja.po: Added missing slashes.
