fixed last log.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12853 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2004-03-29  Michael Natterer  <mitch@gimp.org>
 
-	* app/core/core-enums.h (enum GimpUndoType): added new group
+	* app/core/core-enums.[ch] (enum GimpUndoType): added new group
 	GIMP_UNDO_GROUP_FS_REMOVE.
 
 	* app/core/gimplayer-floating-sel.c (floating_sel_remove): push an
