--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-29  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation by
+	Xavier Beà <xbea@pie.xtec.es>.
+
 2004-03-25  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Dongsu Jang
