--- a/po-script-fu/ca.po
+++ b/po-script-fu/ca.po
@@ -1,17 +1,18 @@
 # gimp-script-fu translation to Catalan.
-# Copyright (C) 2000 Free Software Foundation, Inc.
+# Copyright (C) 2000, 2001, 2003, 2004 Free Software Foundation, Inc.
 # Softcatala <linux@softcatala.org>, 2000-2001
+# Xavier Beà <xbea@pie.xtec.es>, 2003, 2004.
 # Xavier Conde Rueda <xaviconde@eresmas.com>, 2004
 msgid ""
 msgstr ""
-"Project-Id-Version: gimp-script-fu\n"
+"Project-Id-Version: gimp-script-fu 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-23 16:11+0100\n"
-"PO-Revision-Date: 2004-02-25 15:18+0100\n"
-"Last-Translator: Xavier Conde Rueda <xaviconde@eresmas.com>\n"
-"Language-Team: Catalan <tradgnome@softcatala.org>\n"
+"POT-Creation-Date: 2004-03-29 12:02+0200\n"
+"PO-Revision-Date: 2004-03-26 19:46+0100\n"
+"Last-Translator: Xavier Beà <xbea@pie.xtec.es>\n"
+"Language-Team: Catalan <xbea@pie.xtec.es>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: plug-ins/script-fu/script-fu-console.c:141
@@ -38,7 +39,7 @@ msgstr "Navega..."
 
 #: plug-ins/script-fu/script-fu-console.c:582
 msgid "Unable to open a stream on the SIOD output pipe"
-msgstr "No es pot obrir una corrent en el conducte de sortida SIOD"
+msgstr "No es pot obrir un corrent en el conducte de sortida SIOD"
 
 #: plug-ins/script-fu/script-fu-console.c:588
 msgid "Unable to open the SIOD output pipe"
@@ -94,11 +95,11 @@ msgstr "Selecció de tipus de lletra de l'Script-Fu"
 
 #: plug-ins/script-fu/script-fu-scripts.c:1344
 msgid "Script-fu Pattern Selection"
-msgstr "Selecció del patró de l'Script-Fu"
+msgstr "Selecció de patró de l'Script-Fu"
 
 #: plug-ins/script-fu/script-fu-scripts.c:1350
 msgid "Script-Fu Gradient Selection"
-msgstr "Selecció del degradat de l'Script-Fu"
+msgstr "Selecció de degradat de l'Script-Fu"
 
 #: plug-ins/script-fu/script-fu-scripts.c:1357
 msgid "Script-Fu Brush Selection"
@@ -136,7 +137,7 @@ msgstr ""
 
 #: plug-ins/script-fu/script-fu-server.c:602
 msgid "Script-Fu Server Options"
-msgstr "Opcions del servidor de l'Script-Fu"
+msgstr "Opcions de servidor de l'Script-Fu"
 
 #: plug-ins/script-fu/script-fu-server.c:629
 msgid "Server Port:"
@@ -152,7 +153,7 @@ msgstr "<Toolbox>/Extensions/Script-Fu/_Consola de l'Script-Fu"
 
 #: plug-ins/script-fu/script-fu.c:147
 msgid "<Toolbox>/Xtns/Script-Fu/_Start Server..."
-msgstr "<Toolbox>/Extensions/Script-Fu/Inicia el ser_vidor..."
+msgstr "<Toolbox>/Extensions/Script-Fu/Inicia el _servidor..."
 
 #: plug-ins/script-fu/script-fu.c:271 plug-ins/script-fu/script-fu.c:272
 msgid "Re-read all available scripts"
@@ -160,7 +161,7 @@ msgstr "Torna a llegir totes les seqüències disponibles"
 
 #: plug-ins/script-fu/script-fu.c:276
 msgid "<Toolbox>/Xtns/Script-Fu/_Refresh Scripts"
-msgstr "<Toolbox>/Extensions/Script-Fu/Actualitza les _seqüències"
+msgstr "<Toolbox>/Extensions/Script-Fu/_Actualitza les seqüències"
 
 #: plug-ins/dbbrowser/dbbrowser_utils.c:118
 #: plug-ins/dbbrowser/dbbrowser_utils.c:132
@@ -175,7 +176,7 @@ msgstr "Cerca pel _nom"
 #: plug-ins/dbbrowser/dbbrowser_utils.c:123
 #: plug-ins/dbbrowser/dbbrowser_utils.c:137
 msgid "Search by _Blurb"
-msgstr "Cerca _pel comentari"
+msgstr "Cerca pel _comentari"
 
 #: plug-ins/dbbrowser/dbbrowser_utils.c:205
 msgid "_Search:"
@@ -215,7 +216,7 @@ msgstr "S'està cercant. Espereu un moment"
 
 #: plug-ins/dbbrowser/dbbrowser_utils.c:650
 msgid "No matches"
-msgstr "Cap concordança"
+msgstr "Cap coincidència"
 
 #: plug-ins/script-fu/scripts/3d-outline.scm.h:1
 msgid "<Image>/Script-Fu/Alpha to Logo/3D _Outline..."
@@ -228,13 +229,13 @@ msgstr "<Toolbox>/Extensions/Script-Fu/Logotipus/C_ontorn 3D..."
 
 #: plug-ins/script-fu/scripts/3d-outline.scm.h:3
 msgid "Bumpmap (Alpha Layer) Blur Radius"
-msgstr "Radi de difuminat del Bumpmap (Capa alfa)"
+msgstr "Radi de difuminat Bumpmap (Capa alfa)"
 
 #
 #: plug-ins/script-fu/scripts/3d-outline.scm.h:4
 #: plug-ins/script-fu/scripts/glossy.scm.h:6
 msgid "Default Bumpmap Settings"
-msgstr "Configuració del Bumpmap per defecte"
+msgstr "Paràmetres Bumpmap per defecte"
 
 #
 #: plug-ins/script-fu/scripts/3d-outline.scm.h:5
@@ -335,7 +336,7 @@ msgstr "Patró"
 
 #: plug-ins/script-fu/scripts/3d-outline.scm.h:9
 msgid "Shadow Blur Radius"
-msgstr "Radi del difuminat d'ombra"
+msgstr "Radi del difuminat de l'ombra"
 
 #
 #: plug-ins/script-fu/scripts/3d-outline.scm.h:10
@@ -471,12 +472,12 @@ msgstr "Gruix"
 
 #: plug-ins/script-fu/scripts/add-bevel.scm.h:1
 msgid "<Image>/Script-Fu/Decor/Add B_evel..."
-msgstr "<Image>/Script-Fu/Decoració/Af_egeix biselat..."
+msgstr "<Image>/Script-Fu/Decoració/Afegeix _biselat..."
 
 #: plug-ins/script-fu/scripts/add-bevel.scm.h:2
 #: plug-ins/script-fu/scripts/chip-away.scm.h:11
 msgid "Keep Bump Layer"
-msgstr "Manté la capa bump"
+msgstr "Manté capa Bump"
 
 #: plug-ins/script-fu/scripts/add-bevel.scm.h:4
 #: plug-ins/script-fu/scripts/fuzzyborder.scm.h:10
@@ -857,17 +858,17 @@ msgstr "Degradat personalitzat"
 #
 #: plug-ins/script-fu/scripts/blended-logo.scm.h:7
 msgid "FG-BG-HSV"
-msgstr "De primer a segon pla (HSV)"
+msgstr "De primer pla a fons (HSV)"
 
 #
 #: plug-ins/script-fu/scripts/blended-logo.scm.h:8
 msgid "FG-BG-RGB"
-msgstr "De primer a segon pla (RGB)"
+msgstr "De primer pla a fons (RGB)"
 
 #
 #: plug-ins/script-fu/scripts/blended-logo.scm.h:9
 msgid "FG-Transparent"
-msgstr "Fons transparent"
+msgstr "Primer pla transparent"
 
 #: plug-ins/script-fu/scripts/blended-logo.scm.h:12
 #: plug-ins/script-fu/scripts/comic-logo.scm.h:6
@@ -894,12 +895,12 @@ msgstr "Desplaçament (píxels)"
 
 #: plug-ins/script-fu/scripts/bovinated-logo.scm.h:1
 msgid "<Image>/Script-Fu/Alpha to Logo/Bo_vination..."
-msgstr "<Image>/Script-Fu/Alfa a logotipus/Bo_vination..."
+msgstr "<Image>/Script-Fu/Alfa a logotipus/Bo_vinat..."
 
 #
 #: plug-ins/script-fu/scripts/bovinated-logo.scm.h:2
 msgid "<Toolbox>/Xtns/Script-Fu/Logos/Bo_vination..."
-msgstr "<Toolbox>/Extensions/Script-Fu/Logotipus/Bo_vination..."
+msgstr "<Toolbox>/Extensions/Script-Fu/Logotipus/Bo_vinat..."
 
 #: plug-ins/script-fu/scripts/bovinated-logo.scm.h:6
 msgid "Spots density X"
@@ -999,7 +1000,7 @@ msgstr "Esculpeix les àrees blanques"
 #
 #: plug-ins/script-fu/scripts/carve-it.scm.h:3
 msgid "Image to Carve"
-msgstr "Imatge que s'esculpeix"
+msgstr "Imatge a escolpir"
 
 #
 #: plug-ins/script-fu/scripts/carved-logo.scm.h:1
@@ -1054,7 +1055,7 @@ msgstr "Quantitat de bocins"
 #
 #: plug-ins/script-fu/scripts/chip-away.scm.h:5
 msgid "Drop Shadow"
-msgstr ""
+msgstr "Ombra descendent"
 
 #
 #: plug-ins/script-fu/scripts/chip-away.scm.h:6
@@ -1166,7 +1167,7 @@ msgstr "<Image>/Script-Fu/Alquímia/Afegeix _núvols..."
 #: plug-ins/script-fu/scripts/clothify.scm.h:2
 #: plug-ins/script-fu/scripts/swirltile.scm.h:2
 msgid "Azimuth"
-msgstr "Acimut"
+msgstr "Azimut"
 
 #
 #: plug-ins/script-fu/scripts/clothify.scm.h:3
@@ -1192,7 +1193,7 @@ msgstr "Elevació"
 
 #: plug-ins/script-fu/scripts/coffee.scm.h:1
 msgid "<Image>/Script-Fu/Decor/_Coffee Stain..."
-msgstr "<Image>/Script-Fu/Decoració/Ta_ca de cafè..."
+msgstr "<Image>/Script-Fu/Decoració/Taca de _cafè..."
 
 #: plug-ins/script-fu/scripts/coffee.scm.h:2
 msgid ""
@@ -1252,7 +1253,7 @@ msgstr "<Toolbox>/Extensions/Script-Fu/Logotipus/Cristall..."
 #
 #: plug-ins/script-fu/scripts/distress-selection.scm.h:1
 msgid "<Image>/Script-Fu/Selection/_Distress Selection..."
-msgstr ""
+msgstr "<Image>/Script-Fu/Selecció/_Apura selecció..."
 
 #: plug-ins/script-fu/scripts/distress-selection.scm.h:2
 #: plug-ins/script-fu/scripts/fuzzyborder.scm.h:7
@@ -1280,7 +1281,7 @@ msgstr "Llindar (Més gran 1<-->255 Més petit)"
 
 #: plug-ins/script-fu/scripts/drop-shadow.scm.h:1
 msgid "<Image>/Script-Fu/Shadow/_Drop-Shadow..."
-msgstr "<Image>/Script-Fu/Ombra/_Drop-Shadow..."
+msgstr "<Image>/Script-Fu/Ombra/Ombra _descendent..."
 
 #
 #: plug-ins/script-fu/scripts/drop-shadow.scm.h:2
@@ -1336,7 +1337,7 @@ msgstr "Esborra"
 #
 #: plug-ins/script-fu/scripts/erase-rows.scm.h:4
 msgid "Erase/Fill"
-msgstr "Buida/Omple"
+msgstr "Esborra/Omple"
 
 #: plug-ins/script-fu/scripts/erase-rows.scm.h:5
 msgid "Even"
@@ -1367,7 +1368,7 @@ msgstr "Files/Columnes"
 
 #: plug-ins/script-fu/scripts/fade-outline.scm.h:1
 msgid "<Image>/Script-Fu/Selection/_Fade Outline..."
-msgstr "<Image>/Script-Fu/Selecció/Es_vaeix el contorn..."
+msgstr "<Image>/Script-Fu/Selecció/_Esvaeix el contorn..."
 
 #
 #: plug-ins/script-fu/scripts/fade-outline.scm.h:2
@@ -1498,12 +1499,12 @@ msgstr "<Image>/Script-Fu/Decoració/Marge di_fòs..."
 #
 #: plug-ins/script-fu/scripts/fuzzyborder.scm.h:2
 msgid "Add Shadow"
-msgstr "Afegeix ombres"
+msgstr "Afegeix ombra"
 
 #
 #: plug-ins/script-fu/scripts/fuzzyborder.scm.h:3
 msgid "Blur Border"
-msgstr "Marge del difuminat"
+msgstr "Difumina marge"
 
 #: plug-ins/script-fu/scripts/fuzzyborder.scm.h:9
 #, no-c-format
@@ -1610,12 +1611,12 @@ msgstr "<Toolbox>/Extensions/Script-Fu/Logotipus/Lluminó_s..."
 
 #: plug-ins/script-fu/scripts/glossy.scm.h:4
 msgid "Blend Gradient (Outline)"
-msgstr "Barreja el degradat (contorn)"
+msgstr "Barreja el degradat(contorn)"
 
 #
 #: plug-ins/script-fu/scripts/glossy.scm.h:5
 msgid "Blend Gradient (Text)"
-msgstr "Barreja el degradat (text)"
+msgstr "Barreja el degradat(text)"
 
 #: plug-ins/script-fu/scripts/glossy.scm.h:9
 msgid "Outline Gradient Reverse"
@@ -1649,15 +1650,15 @@ msgstr "Inverteix el degradat del text"
 #
 #: plug-ins/script-fu/scripts/glossy.scm.h:19
 msgid "Use Pattern Overlay"
-msgstr "Utilitza un patró sobreposat"
+msgstr "Utilitza sobreposat del patró "
 
 #: plug-ins/script-fu/scripts/glossy.scm.h:20
 msgid "Use Pattern for Outline instead of Gradient"
-msgstr "Utilitza el patró per al contorn en comptes del degradat"
+msgstr "Utilitza el patró pel contorn en comptes del degradat"
 
 #: plug-ins/script-fu/scripts/glossy.scm.h:21
 msgid "Use Pattern for Text instead of Gradient"
-msgstr "Utilitza el patró per al text en comptes del degradat"
+msgstr "Utilitza el patró pel text en comptes del degradat"
 
 #: plug-ins/script-fu/scripts/glowing-logo.scm.h:1
 msgid "<Image>/Script-Fu/Alpha to Logo/Glo_wing Hot..."
@@ -1674,12 +1675,12 @@ msgstr "Mida de l'efecte (píxels * 3)"
 
 #: plug-ins/script-fu/scripts/gradient-bevel-logo.scm.h:3
 msgid "<Image>/Script-Fu/Alpha to Logo/Gradient Beve_l..."
-msgstr "<Image>/Script-Fu/Alfa a logotipus/Bise_lat del deg..."
+msgstr "<Image>/Script-Fu/Alfa a logotipus/Bise_lat del gradient..."
 
 #
 #: plug-ins/script-fu/scripts/gradient-bevel-logo.scm.h:4
 msgid "<Toolbox>/Xtns/Script-Fu/Logos/Gradient Beve_l..."
-msgstr "<Toolbox>/Extensions/Script-Fu/Logotipus/Bise_lat del degradat..."
+msgstr "<Toolbox>/Extensions/Script-Fu/Logotipus/Bise_lat del gradient..."
 
 #: plug-ins/script-fu/scripts/gradient-bevel-logo.scm.h:6
 msgid "Bevel Height (Sharpness)"
@@ -1694,7 +1695,7 @@ msgstr "Mida del marge (píxels)"
 #
 #: plug-ins/script-fu/scripts/gradient-example.scm.h:1
 msgid "<Toolbox>/Xtns/Script-Fu/Utils/Custom _Gradient..."
-msgstr "<Toolbox>/Extensions/Script-Fu/Utilitats/De_gradat personalitzat..."
+msgstr "<Toolbox>/Extensions/Script-Fu/Utilitats/_Gradient personalitzat..."
 
 #: plug-ins/script-fu/scripts/grid-system.scm.h:1
 msgid "<Image>/Script-Fu/Render/_Grid..."
@@ -1710,7 +1711,7 @@ msgstr "Divisions d'Y"
 
 #: plug-ins/script-fu/scripts/hsv-graph.scm.h:1
 msgid "<Image>/Script-Fu/Utils/Draw _HSV Graph..."
-msgstr "<Imatge>/Script-Fu/Utilitats/Dibuixa la gràfica _HSV..."
+msgstr "<Imatge>/Script-Fu/Utilitats/Dibuixa gràfic _HSV..."
 
 #
 #: plug-ins/script-fu/scripts/hsv-graph.scm.h:2
@@ -1775,7 +1776,7 @@ msgstr "Aplica la màscara de capa (o descarta)"
 #
 #: plug-ins/script-fu/scripts/image-structure.scm.h:4
 msgid "Create New Image"
-msgstr "Crea una imatge nova"
+msgstr "Crea una nova imatge"
 
 #
 #: plug-ins/script-fu/scripts/image-structure.scm.h:5
@@ -1804,7 +1805,7 @@ msgstr "Opacitat de l'emplenat"
 
 #: plug-ins/script-fu/scripts/image-structure.scm.h:10
 msgid "Padding for Transparent Regions"
-msgstr "Emplena de les regions transparents"
+msgstr "Emplenat de les regions transparents"
 
 #
 #: plug-ins/script-fu/scripts/image-structure.scm.h:11
@@ -1833,7 +1834,7 @@ msgstr "Profunditat del mar"
 
 #: plug-ins/script-fu/scripts/lava.scm.h:1
 msgid "<Image>/Script-Fu/Render/_Lava..."
-msgstr "<Image>/Script-Fu/Composició d'imatges/_Lava..."
+msgstr "<Image>/Script-Fu/Render/_Lava..."
 
 #
 #: plug-ins/script-fu/scripts/lava.scm.h:4
@@ -1853,7 +1854,7 @@ msgstr "Utilitza el degradat actual"
 
 #: plug-ins/script-fu/scripts/line-nova.scm.h:1
 msgid "<Image>/Script-Fu/Render/Line _Nova..."
-msgstr "<Imatge>/Script-Fu/Composició d'imatges/_Nova de línies..."
+msgstr "<Imatge>/Script-Fu/Render/_Nova de línies..."
 
 #: plug-ins/script-fu/scripts/line-nova.scm.h:2
 msgid "Number of Lines"
@@ -1867,7 +1868,7 @@ msgstr "Radi de desplaçament"
 #
 #: plug-ins/script-fu/scripts/line-nova.scm.h:4
 msgid "Randomness"
-msgstr "Aleatoriatat"
+msgstr "Aleatorietat"
 
 #: plug-ins/script-fu/scripts/line-nova.scm.h:5
 msgid "Sharpness (degrees)"
@@ -2139,7 +2140,7 @@ msgstr "Afegeix fons"
 
 #: plug-ins/script-fu/scripts/round-corners.scm.h:3
 msgid "Add Drop-Shadow"
-msgstr ""
+msgstr "Afegeix ombra descendent"
 
 #
 #: plug-ins/script-fu/scripts/round-corners.scm.h:5
@@ -2258,7 +2259,7 @@ msgstr "Gira d'esquerra a dreta"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:1
 msgid "<Image>/Script-Fu/Render/_Spyrogimp..."
-msgstr "<Image>/Script-Fu/Composició d'imatges/E_spirogimp..."
+msgstr "<Image>/Script-Fu/Render/E_spirogimp..."
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:2
 msgid "Airbrush"
@@ -2622,7 +2623,7 @@ msgstr "Amplada de la cinta"
 #
 #: plug-ins/script-fu/scripts/weave.scm.h:4
 msgid "Shadow Darkness"
-msgstr "Opacitat de l'ombra"
+msgstr "Foscor de l'ombra"
 
 #
 #: plug-ins/script-fu/scripts/weave.scm.h:5
@@ -2661,24 +2662,24 @@ msgstr "<Image>/Script-Fu/Ombra/Efecte _Xach..."
 
 #: plug-ins/script-fu/scripts/xach-effect.scm.h:2
 msgid "Drop Shadow Blur Radius"
-msgstr ""
+msgstr "Radi de difuminat de l'ombra descendent"
 
 #
 #: plug-ins/script-fu/scripts/xach-effect.scm.h:3
 msgid "Drop Shadow Color"
-msgstr ""
+msgstr "Color de l'ombra descendent"
 
 #: plug-ins/script-fu/scripts/xach-effect.scm.h:4
 msgid "Drop Shadow Opacity"
-msgstr ""
+msgstr "Opacitat de l'ombra descendent"
 
 #: plug-ins/script-fu/scripts/xach-effect.scm.h:5
 msgid "Drop Shadow X Offset"
-msgstr ""
+msgstr "Desplaçament en X de l'ombra descendent"
 
 #: plug-ins/script-fu/scripts/xach-effect.scm.h:6
 msgid "Drop Shadow Y Offset"
-msgstr ""
+msgstr "Desplaçament en Y de l'ombra descendent"
 
 #
 #: plug-ins/script-fu/scripts/xach-effect.scm.h:8
