--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-03-29  Sven Neumann  <sven@gimp.org>
+
+	* app/config/gimpguiconfig.c: changed the default for "help-locales"
+	from NULL to an empty string. Fixes the generated gimprc man-page.
+
+	* app/config/gimprc-blurbs.h (HELP_LOCALES_BLURB): added missing
+	whitespace.
+
+	* app/widgets/gimphelp.c: use the user's locale if "help-locales"
+	is NULL or the empty string.
+
+	* docs/gimprc.5.in
+	* etc/gimprc: regenerated.
+
 2004-03-29  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/core-enums.[ch] (enum GimpUndoType): added new group
@@ -17,7 +31,7 @@
 
 	* plug-ins/ifscompose/ifscompose.c: applied patch from David Necas
 	that updates the sensitivity of the Delete button and menu entry.
-	Fixes bug 138212#.
+	Fixes bug #138212.
 
 2004-03-28  Sven Neumann  <sven@gimp.org>
 
