--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-20  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+	* configure.in: Added "pa" for Punjabi to ALL_LINGUAS.
+
 2004-03-29  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/jpeg.c (struct my_error_mgr): Move setjump_buffer
