2004-03-30  Michael Natterer  <mitch@gimp.org>
	* configure.in (ALL_LINGUAS): revert addition on "pa" until
	all .po files are there.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12859 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-30  Michael Natterer  <mitch@gimp.org>
+
+	* configure.in (ALL_LINGUAS): revert addition on "pa" until
+	all .po files are there.
+
 2004-03-20  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* configure.in: Added "pa" for Punjabi to ALL_LINGUAS.
