2004-03-30  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/scripts/grid-system.scm: define "map" here,
	the script used to take the definition from alien-glow-arrow.scm
	or beveled-pattern-arrow.scm. Also added an undo group around all
	operations. Fixes bug #138524.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12861 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-30  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/grid-system.scm: define "map" here,
+	the script used to take the definition from alien-glow-arrow.scm
+	or beveled-pattern-arrow.scm. Also added an undo group around all
+	operations. Fixes bug #138524.
+
 2004-03-30  Michael Natterer  <mitch@gimp.org>
 
 	* app/Makefile.am
