--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-30  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Updated British English translation
+
 2004-03-25  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
