--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-30  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Updated British English translation
+
 2004-03-29  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
