--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-31  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimptransformtool.c: One really should use braces
+	when mixing additions and multiplication and the operator
+	precedence is not the desired one...
+
+	I feel stupid...  :-)
+
 2004-03-31  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimp-transform-utils.c
