2004-03-31  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
* pt_BR.po: Updated Brazilian Portuguese translation done by João
Sebastião de Oliveira Bueno <gwidion@mpc.com.br>.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12865 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-31  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation done by João
+	Sebastião de Oliveira Bueno <gwidion@mpc.com.br>.
+
 2004-03-30  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translation
