--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-01  Sven Neumann  <sven@gimp.org>
+
+	* tools/kernelgen.c: updated a comment.
+
 2004-04-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/core-enums.[ch] (enum GimpUndoType): added undo type
