2004-04-01  Michael Natterer  <mitch@gimp.org>
	* it.po: Fixed translation of "Mosaic..." and made translations of
	"Ripple..." and "Waves..." fuzzy because they were both translated
	as "Onde...". Fixes bug #138737.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12869 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-01  Michael Natterer  <mitch@gimp.org>
+
+	* it.po: Fixed translation of "Mosaic..." and made translations of
+	"Ripple..." and "Waves..." fuzzy because they were both translated
+	as "Onde...". Fixes bug #138737.
+
 2004-03-30  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translation
