2004-04-02  Simon Budig  <simon@gimp.org>
	* plug-ins/common/whirlpinch.c: set a proper pixelfetcher
	edge mode for bigger radii. Avoids getting garbage at the
	image borders.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12871 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-02  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/whirlpinch.c: set a proper pixelfetcher 
+	edge mode for bigger radii. Avoids getting garbage at the
+	image borders.
+
 2004-04-02  Dave Neary  <bolsh@gimp.org>
 
 	* plug-ins/common/jpeg.c: Added .jpe to the list of extensions 
