--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-03  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/Lighting/lighting_main.c
+	* plug-ins/Lighting/lighting_shade.c: applied the first of two
+	patches attached to bug #138788 by William Skaggs.
+
 2004-04-02  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/whirlpinch.c: set a proper pixelfetcher 
